# a-GPS-has-no-name

./: .env.example  .gitignore  README.md  docker-compose.yml
FastApi/: requirements.txt
FastApi/app/: main.py
FastApp/: Dokerfile  postres.py
backend/: Dockerfile  pyproject.toml
backend/src/app/: graphql.py  main.py  models.py  service.py
broker/: docker-compose.yml  main.py
consumer/: Dockerfile  consumer.py  models.py  postgres.py  postres.py  requirements.txt
frontend/: .dockerignore  Dockerfile  bun.lockb  houdini.config.js  package.json  svelte.config.js
frontend/app/: .gitignore  Containerfile  bun.lockb  houdini.config.js  package.json  pnpm-lock.yaml  schema.graphql
frontend/app/.svelte-kit/: ambient.d.ts  tsconfig.json
frontend/app/.svelte-kit/types/: route_meta_data.json
frontend/app/.svelte-kit/types/src/routes/: $types.d.ts
frontend/app/.svelte-kit/types/src/routes/(gps-tracker)/: $types.d.ts
frontend/app/.svelte-kit/types/src/routes/api/placeholder/: $types.d.ts
frontend/app/.svelte-kit/types/src/routes/example/: $types.d.ts
frontend/app/src/: client.ts
frontend/app/src/routes/: +layout.svelte
frontend/app/src/routes/(gps-tracker)/: +page.svelte
frontend/src/: client.ts
frontend/src/routes/(gps-tracker)/: +page.gql  +page.svelte
frontend5/: bun.lockb  package.json
old_FastApi/: .dockerignore  requirements.txt
old_FastApi/app/: main.py
placeholder_backend/: Containerfile  pyproject.toml
placeholder_backend/src/app/: main.py
producer/: Dockerfile  models.py  producer.py  requirements.txt
