[tool.poetry]
name = "placeholder-backend"
version = "0.1.0"
description = ""
authors = ["MoonLyss <shaitan.lyssm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
strawberry-graphql = {extras = ["fastapi"], version = "^0.216.1"}
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
